--- a/tempus/templates/layout.html
+++ b/tempus/templates/layout.html
@@ -18,6 +18,16 @@
         {% endblock %}
         </div>
 
+        <script>
+        window.requestAnimFrame = (function(){
+          return  window.requestAnimationFrame       ||
+                  window.webkitRequestAnimationFrame ||
+                  window.mozRequestAnimationFrame    ||
+                  function( callback ){
+                    window.setTimeout(callback, 1000 / 60);
+                  };
+        })();
+        </script>
         <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
         <script type="text/javascript" src="{{ url_for('static', filename='js/tempus.js') }}"></script>
         {% block scripts %}
